<resources>
    <string name="app_name">DREAM</string>
    <string name="textview">GRADE CALCULATOR</string>
    <string name="quizes_15">Quizes %15</string>
    <string name="homework_25">Homework %25</string>
    <string name="mid_terms_30">Mid terms %30</string>
    <string name="final_30">Final %30</string>
    <string name="calculate">CALCULATE</string>
    <string name="rest">rest</string>
</resources>